--- a/docs/api-reference/storefront.yaml
+++ b/docs/api-reference/storefront.yaml
@@ -1847,9 +1847,8 @@ components:
       in: header
       description: |-
         Order token to authorize Cart and Checkout requests.
-        Useful for guest checouts when you don't have the user token (bearerAuth)
-
-        You can obtain it from the [Retrieve a Cart endpoint](/api-reference/storefront/cart/retrieve-a-cart) - it's the `token` field that you will find it in the JSON response.
+        
+        [How to obtain X-Spree-Order-Token](../authentication#for-guest-users)
       name: X-Spree-Order-Token
   schemas:
     Address:
