--- a/cli/lib/spree_cli/templates/extension/Gemfile
+++ b/cli/lib/spree_cli/templates/extension/Gemfile
@@ -5,14 +5,21 @@ git_source(:github) do |repo_name|
   "https://github.com/#{repo_name}.git"
 end
 
+gem 'rails-controller-testing'
+
+spree_opts = { github: 'spree/spree', branch: 'main' }
+gem 'spree', spree_opts
+gem 'spree_emails', spree_opts
+
+gem 'spree_backend', github: 'spree/spree_backend', branch: 'main'
+gem 'spree_frontend', github: 'spree/spree_rails_frontend', branch: 'main'
+
 if ENV['DB'] == 'mysql'
   gem 'mysql2'
+elsif ENV['DB'] == 'postgres'
+  gem 'pg'
 else
-  gem 'pg', '~> 1.1'
+  gem 'sqlite3', '~> 1.4'
 end
-
-gem 'spree', github: 'spree/spree', branch: 'main'
-# gem 'spree_backend', github: 'spree/spree_backend', branch: 'main'
-gem 'rails-controller-testing'
 
 gemspec
