--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ defaults: &defaults
       type: string
     rails_version:
       type: string
-      default: '~> 7.1.0'
+      default: '~> 7.2.0'
     store_artefacts:
       type: boolean
       default: false
@@ -137,6 +137,13 @@ workflows:
               - bundle_ruby
       - tests_postgres:
           name: tests_rails_postgres
+          store_artefacts: true
+          run_file_path: ./bin/tests_database_ci.sh
+          requires:
+              - bundle_ruby
+      - tests_postgres:
+          name: tests_rails_7_1_postgres
+          rails_version: '~> 7.1.0'
           store_artefacts: true
           run_file_path: ./bin/tests_database_ci.sh
           requires:
