--- a/docs/api-reference/platform.yaml
+++ b/docs/api-reference/platform.yaml
@@ -3,9 +3,9 @@ openapi: 3.0.3
 info:
   title: Platform API
   contact:
-    name: Spark Solutions
-    url: https://sparksolutions.co
-    email: we@sparksolutions.co
+    name: Vendo Connect Inc.
+    url: https://getvendo.com
+    email: sales@getvendo.com
   description: Spree Platform API
   version: v2
 paths:
